WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224200
Web Inspector: Grid overlay line numbers should not include implicit tracks in negative line number calculations.
https://bugs.webkit.org/show_bug.cgi?id=224200
Summary
Web Inspector: Grid overlay line numbers should not include implicit tracks i...
Patrick Angle
Reported
2021-04-05 13:12:36 PDT
The negative line numbers should only be counting from the last explicit track in each direction. Currently they are being shown as counting from the last track, including implicit tracks.
Attachments
Patch v1.0
(3.73 KB, patch)
2021-04-06 13:48 PDT
,
Patrick Angle
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-04-06 10:20:18 PDT
<
rdar://problem/76272817
>
Patrick Angle
Comment 2
2021-04-06 13:48:39 PDT
Created
attachment 425321
[details]
Patch v1.0
Blaze Burg
Comment 3
2021-04-06 13:52:56 PDT
Comment on
attachment 425321
[details]
Patch v1.0 r=me
EWS
Comment 4
2021-04-06 15:09:15 PDT
Committed
r275558
: <
https://commits.webkit.org/r275558
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425321
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug