Web Inspector: Grid overlay line numbers should not include implicit tracks in negative line number calculations. https://bugs.webkit.org/show_bug.cgi?id=224200

Reviewed by BJ Burg.

Use the `authoredTrackColumnSizes`/`authoredTrackRowSizes` to determine if the line is an explicit grid line or
implicit grid line (starting with the patch for bug 224199 those vectors will only contain the explicit lines).
Only explicit lines should have a negative number for addressing the line, and those numbers should start with
the last explicit line. Because each track is bounded by two lines, there will always be one more explicit line
than there is explicit track, including the case where there are no explicit tracks, which will still have a
single explicit line numbered `-1`.

Additionally, line numbers are now separated by an em-space to improve legibility, where previously the bullet
looked like a multiplication symbol between two numbers.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::buildGridOverlay):


Canonical link: https://commits.webkit.org/236213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275558 268f45cc-cd09-0410-ab3c-d52691b4dbfc